--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     Coded by <a href="https://www.linkedin.com/in/alex-allan-silveira-a1b327264/">Alex Allan</a>.
   </div>
 
-  <script src="./src/js/index.js"></script>
+  <script src="./src/js/script.js"></script>
 </body>
 
 </html>
