--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 
 <body>
   <main>
-    <section class="containerLanguage" >
+    <section class="formContainer">
       <form class="form">
-        <label for="checkLanguage">Português</label>
-        <input id="checkLanguage"  type="radio" name="ChackLanguage" value="Portugues" checked="">
-        <label for="checkLanguage">Ingles</label>
-        <input id="checkLanguage" type="radio" name="ChackLanguage"value="Ingles">
-    </form>
+        <select  class="selectForm language"  name="Language" id="Language">
+          <option class="valorForm" value="PT">PT-BR</option>
+          <option class="valorForm" value="EN">EN-US</option>
+        </select>
+      </form>
     </section>
     <section class="container">
-
       <h1 class="advise">A D V I S E #<span id="numeroConselho">1</span></h1>
       <p class="text" id="exibirConselho"> "você precisa de um conselho?<br>----<br>Do you need advice?"</p>
       <picture>
